--- a/notebooks/tensorboard.ipynb
+++ b/notebooks/tensorboard.ipynb
@@ -20,9 +20,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-28 00:41:23.669078: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2022-05-28 00:41:23.672160: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:23.672168: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-06-06 22:26:25.795282: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-06-06 22:26:25.870745: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:25.870757: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -36,16 +36,7 @@
    "execution_count": 3,
    "id": "447a268f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
@@ -71,19 +62,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-28 00:41:49.004302: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:961] could not open file to read NUMA node: /sys/bus/pci/devices/0000:02:00.0/numa_node\n",
+      "2022-06-06 22:26:39.075070: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:961] could not open file to read NUMA node: /sys/bus/pci/devices/0000:02:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-05-28 00:41:49.007933: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008029: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublas.so.11'; dlerror: libcublas.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008111: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublasLt.so.11'; dlerror: libcublasLt.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008157: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcufft.so.10'; dlerror: libcufft.so.10: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008228: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcurand.so.10'; dlerror: libcurand.so.10: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008306: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008391: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusparse.so.11'; dlerror: libcusparse.so.11: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008436: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
-      "2022-05-28 00:41:49.008442: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2022-06-06 22:26:39.078607: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078650: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublas.so.11'; dlerror: libcublas.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078696: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublasLt.so.11'; dlerror: libcublasLt.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078728: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcufft.so.10'; dlerror: libcufft.so.10: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078756: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcurand.so.10'; dlerror: libcurand.so.10: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078783: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078811: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusparse.so.11'; dlerror: libcusparse.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078837: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
+      "2022-06-06 22:26:39.078842: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n",
-      "2022-05-28 00:41:49.008910: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2022-06-06 22:26:39.080064: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -92,21 +83,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2185 - accuracy: 0.9343 - val_loss: 0.1052 - val_accuracy: 0.9697\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.2176 - accuracy: 0.9352 - val_loss: 0.1011 - val_accuracy: 0.9701\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0979 - accuracy: 0.9696 - val_loss: 0.0856 - val_accuracy: 0.9731\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0955 - accuracy: 0.9714 - val_loss: 0.0797 - val_accuracy: 0.9757\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0699 - accuracy: 0.9775 - val_loss: 0.0710 - val_accuracy: 0.9767\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0674 - accuracy: 0.9788 - val_loss: 0.0759 - val_accuracy: 0.9751\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0548 - accuracy: 0.9821 - val_loss: 0.0636 - val_accuracy: 0.9807\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0525 - accuracy: 0.9829 - val_loss: 0.0660 - val_accuracy: 0.9787\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0430 - accuracy: 0.9859 - val_loss: 0.0727 - val_accuracy: 0.9801\n"
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0427 - accuracy: 0.9864 - val_loss: 0.0662 - val_accuracy: 0.9809\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f578c538400>"
+       "<keras.callbacks.History at 0x7fda2c2b48b0>"
       ]
      },
      "execution_count": 4,
@@ -132,20 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4c185115",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 9661), started 9 days, 21:47:28 ago. (Use '!kill 9661' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-135f6b0e1d269065\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-ef35d2a6ac967c6b\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-135f6b0e1d269065\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-ef35d2a6ac967c6b\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -166,19 +166,14 @@
    "source": [
     "%tensorboard --logdir logs/fit"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff8ad933",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "1e8479639b030b9c4d4725559625eb63631b1e663b9fecf3e88071a842b684dd"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
